[gd_scene load_steps=3 format=3 uid="uid://dm7on4pqb75qj"]

[ext_resource type="Script" uid="uid://bs5di66b5a8o6" path="res://ui/common/context_popup.gd" id="1_lao8o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trw2q"]
bg_color = Color(0.485287, 0.662448, 0.343871, 1)

[node name="ContextPopup" type="PanelContainer"]
custom_minimum_size = Vector2(120, 0)
offset_right = 128.0
offset_bottom = 146.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_trw2q")
script = ExtResource("1_lao8o")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Menu" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="AddToHotbarButton" type="Button" parent="MarginContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Create a persistant shortcut in the hotbar"
text = "Add to Hotbar"

[node name="EditButton" type="Button" parent="MarginContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
text = "Edit"

[node name="DeleteButton" type="Button" parent="MarginContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
text = "Delete"

[node name="DuplicateButton" type="Button" parent="MarginContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Create a copy of this list"
text = "Duplicate"

[node name="CopyButton" type="Button" parent="MarginContainer/Menu"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Copy"

[node name="GroupButton" type="Button" parent="MarginContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Group high level lists together"
text = "Group With"
